# AirDribbleRatingBot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.example.json
docs/: ARCHITECTURE.md  COMMANDS.md  CONTRIBUTING.md  ROADMAP.md
src/: main.cpp
src/commands/: ping.h
src/handlers/: command_handler.cpp  command_handler.h  event_handler.cpp  event_handler.h
src/saved/: challenges.json  channel.json  ranks.json
